--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,12 @@ edition = "2021"
 [dependencies]
 russh = "0.34"
 russh-keys = "0.22"
+ed25519-dalek = "1"
 tokio = "1"
 futures = "0.3"
 env_logger = "0.10"
 log = "0.4"
 anyhow = "1.0"
+clap = { version = "4.1.1", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.7"
